add theme directory

--- a/theme/index.html
+++ b/theme/index.html
@@ -28,20 +28,33 @@
                 </div>
             </div>
             <div class="person-pic"></div>
-            <div class="menu-container">
-                <div class="name-pic"><a href="#"></a></div>
-                <div class="menu">
-                    <ul>
-                        <li><a href="#">صفحه یک</a></li>
-                        <li><a href="#">صفحه یک</a></li>
-                        <li><a href="#">صفحه یک</a></li>
-                        <li><a href="#">صفحه یک</a></li>
-                        <li><a href="#">صفحه یک</a></li>
-                        <li><a href="#">صفحه یک</a></li>
-                        <li><a href="#">صفحه یک</a></li>
-                        <li><a href="#">صفحه یک</a></li>
-                    </ul>
-                </div>
+            <div class="name-pic"><a href="#"></a></div>
+            <div class="menu">
+                <ul>
+                    <li><a href="#">صفحه یک</a></li>
+                    <li><a href="#">صفحه یک</a></li>
+                    <li><a href="#">صفحه یک</a></li>
+                    <li><a href="#">صفحه یک</a></li>
+                    <li><a href="#">صفحه یک</a></li>
+                    <li><a href="#">صفحه یک</a></li>
+                    <li><a href="#">صفحه یک</a></li>
+                    <li><a href="#">صفحه یک</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="menu-container fixed hidden">
+            <div class="name-pic"><a href="#"></a></div>
+            <div class="menu">
+                <ul>
+                    <li><a href="#">صفحه یک</a></li>
+                    <li><a href="#">صفحه یک</a></li>
+                    <li><a href="#">صفحه یک</a></li>
+                    <li><a href="#">صفحه یک</a></li>
+                    <li><a href="#">صفحه یک</a></li>
+                    <li><a href="#">صفحه یک</a></li>
+                    <li><a href="#">صفحه یک</a></li>
+                    <li><a href="#">صفحه یک</a></li>
+                </ul>
             </div>
         </div>
         <div class="slider owl-carousel owl-theme">
