--- a/theme/index.html
+++ b/theme/index.html
@@ -42,7 +42,7 @@
                 </ul>
             </div>
         </div>
-        <div class="menu-container fixed hidden">
+        <div class="menu-container hidden">
             <div class="name-pic"><a href="#"></a></div>
             <div class="menu">
                 <ul>
