--- a/theme/index.html
+++ b/theme/index.html
@@ -18,7 +18,7 @@
 <div class="top-section">
     <div class="container">
         <div class="header">
-            <div class="aya"></div>
+            <div class="aya hidden-xs"></div>
             <div class="search-container">
                 <div class="input-group">
                     <input type="text" class="form-control" placeholder="بحث">
@@ -27,9 +27,9 @@
                     </div>
                 </div>
             </div>
-            <div class="person-pic"></div>
-            <div class="name-pic"><a href="#"></a></div>
-            <div class="menu">
+            <div class="person-pic hidden-xs"></div>
+            <div class="name-pic hidden-xs"><a href="#"></a></div>
+            <div class="menu hidden-xs">
                 <ul>
                     <li><a href="#">صفحه یک</a></li>
                     <li><a href="#">صفحه یک</a></li>
@@ -42,19 +42,23 @@
                 </ul>
             </div>
         </div>
-        <div class="menu-container hidden">
-            <div class="name-pic"><a href="#"></a></div>
-            <div class="menu">
-                <ul>
-                    <li><a href="#">صفحه یک</a></li>
-                    <li><a href="#">صفحه یک</a></li>
-                    <li><a href="#">صفحه یک</a></li>
-                    <li><a href="#">صفحه یک</a></li>
-                    <li><a href="#">صفحه یک</a></li>
-                    <li><a href="#">صفحه یک</a></li>
-                    <li><a href="#">صفحه یک</a></li>
-                    <li><a href="#">صفحه یک</a></li>
-                </ul>
+        <div class="menu-container on-top">
+            <div class="container">
+                <div class="name-pic"><a href="#"></a></div>
+                <div class="mobile-menu-trigger visible-xs"></div>
+                <div class="overlay"></div>
+                <div class="menu">
+                    <ul>
+                        <li><a href="#">صفحه یک</a></li>
+                        <li><a href="#">صفحه یک</a></li>
+                        <li><a href="#">صفحه یک</a></li>
+                        <li><a href="#">صفحه یک</a></li>
+                        <li><a href="#">صفحه یک</a></li>
+                        <li><a href="#">صفحه یک</a></li>
+                        <li><a href="#">صفحه یک</a></li>
+                        <li><a href="#">صفحه یک</a></li>
+                    </ul>
+                </div>
             </div>
         </div>
         <div class="slider owl-carousel owl-theme">
@@ -203,7 +207,7 @@
             </video>
         </div>
         <div class="title-container">
-            <img src="images/logo.png">
+            <img src="images/logo.png" class="hidden-xs">
             <h2>لمعات من حياة الشهيد الجلالي <span>(قدس سره)</span><small>قناة كربلاء الفضائية</small></h2>
         </div>
     </div>
@@ -359,7 +363,7 @@
             <div class="pull-right">
                 <a href="#">by rahbod</a>
             </div>
-            <div class="pull-left text"><b>al-jalali.com</b> . ALL RIGHTS RESERVED © 2018</div>
+            <div class="pull-left text hidden-xs"><b>al-jalali.com</b> . ALL RIGHTS RESERVED © 2018</div>
         </div>
     </div>
 </div>
